resolve desktop layout issues with thesis section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,18 +9,19 @@ html, body {
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 3rem;
   padding-bottom: 1rem;
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   padding-bottom: 1rem;
 }
 
 h3 {
   font-size: 1.5rem;
   padding-bottom: 1rem;
+  font-weight: bold;
 }
 
 a {
@@ -114,17 +115,17 @@ nav li {
   width: 100%;
 }
 
-.banner-text {
-  width: 40%
+.jumbotron-text {
+  width: 40%;
+
 }
 
-.learn-title {
-  width: 85%;
-  font-size: 2.5rem;
+.jumbotron-text h1 {
+  font-size: 3rem;
   padding-bottom: 1rem;
 }
 
-.learn-subtitle {
+.jumbotron-text h2 {
   width: 85%;
 }
 
@@ -157,7 +158,7 @@ nav li {
 }
 
 .practice-left-text {
-  padding: 0 1.5rem;
+  padding: 2rem 1.5rem;
   margin-bottom: 2rem;
 }
 
@@ -184,7 +185,11 @@ nav li {
   display: flex;
   background-color: Gainsboro;
   padding: 1rem 1rem;
-  border-bottom: DarkSlateGrey 1px solid;
+}
+
+.speaker {
+  background-color: white;
+  border: .25rem solid Gainsboro;
 }
 
 .practice-feature-image {
@@ -211,13 +216,16 @@ nav li {
 
 .course-container {
   padding: 2rem 4.5rem;
-  background-color: LightSlateGrey;
+  background-color: Gainsboro;
   text-align: center;
   max-width: 100%;
 }
 
 .course-container h2 {
+  padding: 1rem 0;
   margin-bottom: 1rem;
+  color: midnightblue;
+  font-weight: bold;
 }
 
 .course-grid {
@@ -260,11 +268,11 @@ nav li {
 /* Thesis section */
 
 .thesis-container {
-  padding-top: 4rem;
 }
 
 .thesis-container h2 {
   text-align: center;
+  padding: 2rem 0;
 }
 
 .thesis-grid {
@@ -272,36 +280,44 @@ nav li {
 }
 
 .thesis-left-container {
-  padding: 2rem 1.5rem;
+  padding: 0 1.5rem 1.5rem 1.5rem;
   width: 60%;
 }
 
 .thesis-video video {
   width: 100%;
-  margin-bottom: 1.5rem;
 }
 
-.video-text {
+.video-text h3 {
+  padding-top: 1.5rem;
+  font-weight: 500;
+  font-size: 1.5rem;
+}
 
+.video-text p {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
 }
 
 .thesis-right-container {
   width: 40%;
-  padding-top: 2rem;
-  padding-right: 0.35rem;
 }
 
 .thesis-feature {
   display: flex;
-  width: 100%;
-  padding: 1rem 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: Gainsboro;
-  border-bottom: DarkSlateGrey 1px solid;
+}
+
+.whitebg {
+  background-color: white;
+  border: 1px solid Gainsboro;
 }
 
 .thesis-feature-image {
   width: 35%;
-  padding-right: 1rem;
+  padding: 1rem 1rem;
 }
 
 .thesis-feature-text {
@@ -310,6 +326,15 @@ nav li {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.thesis-feature-text h3 {
+  font-weight: 600;
+}
+
+.thesis-feature-text p {
+  font-size: 1rem;
+  margin-top: .5rem;
 }
 
 .thesis-feature-image img {
@@ -327,6 +352,7 @@ footer {
   height: 5rem;
   font-size: 0.75rem;
   padding-top: 1rem;
+  border-top: 1px solid Gainsboro;
 }
 
 .copyright {
